# catalyst-cooperative.github.io

./: .pre-commit-config.yaml  404.html  CNAME  LICENSE  README.md  genindex.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  searchindex.js  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml
_sources/: index.rst.txt
data-sources/: index.html
docs/: data-sources.md  index.md
evaluating-energy-data/curation/: index.html
evaluating-energy-data/format/: index.html
evaluating-energy-data/level-of-structure/: index.html
evaluating-energy-data/licensing/: index.html
evaluating-energy-data/linkability/: index.html
evaluating-energy-data/structural-attributes/: index.html
search/: search_index.json
src/: conf.py  index.rst
