[project]
name = "docs-catalyst-coop"
version = "0.1.0"
description = "Top level documentation index for Catalyst Cooperative."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mdx-gh-links>=0.4",
    "mdx-truly-sane-lists>=1.3",
    "mkdocs-git-committers-plugin-2>=2.4.1",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-material>=9.5.43",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "pre-commit>=4.0.1",
]
