[project]
name = "docs-catalyst-coop"
version = "0.1.0"
description = "Top level documentation index for Catalyst Cooperative."
readme = "README.md"
requires-python = ">=3.14"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
docs-catalyst-coop = { path = ".", editable = true }

[tool.pixi.tasks.docs-build]
cmd = """
python -m sphinx --jobs auto -W -b html src build/html
"""
description = "Build PUDL docs using Sphinx"

[tool.pixi.dependencies]
sphinx = ">=9.1.0,<10"
pydata-sphinx-theme = ">=0.17.0,<0.18"
prek = ">=0.3.9"
